# nenarwia

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs
src/: main.rs
src/core/: allocation.rs  color.rs  file_manager.rs  formats.rs  index.rs  index_sqlite.rs  install.rs  metrics.rs  mod.rs  pack.rs  process_memory.rs  profiler.rs  scanner.rs  tab_session.rs  trash.rs  vram.rs
src/core/app_settings/: graphics.rs  mod.rs  persistence.rs  types.rs
src/core/color/: basic_decode.rs  gpu_resize.rs  missing_codec.rs  resize.rs  wic.rs  winrt.rs
src/core/engine/: mod.rs  runner.rs
src/core/engine/frame_pacing/: gate.rs  (+2 more)
src/core/index/: json.rs
src/core/index_sqlite/: schema.rs
src/core/loader/: disk_cache.rs  manager.rs  mem_cache.rs  mod.rs  processor.rs  types.rs  worker.rs
src/core/pack/: allocator.rs  compact.rs  model.rs  reader.rs  schema.rs  writer.rs
src/core/wallpaper/: assets.rs  blur.rs  fs.rs  library.rs  mod.rs  model.rs  tests.rs
src/render/: backdrop_blur.wgsl  cull.wgsl  instance.rs  mod.rs  slot_backdrop.wgsl  ui.wgsl  wallpaper.wgsl
src/render/atlas/: allocator.rs  gpu.rs  manager.rs  mod.rs  multi.rs
src/render/cache/: constants.rs  lookup.rs  math.rs  mod.rs  texture.rs  uniform.rs
src/render/compute/: init.rs  manager.rs  mod.rs  pass.rs  types.rs
src/render/context/: budget.rs  mod.rs  render.rs  ui.rs
src/render/gpu/: init.rs  mod.rs  state.rs
src/render/layout/: mod.rs  types.rs
src/render/pipeline/: factory.rs  mod.rs  shader_source.rs
src/render/scene/: append.rs  builder.rs  data.rs  mod.rs  modifiers.rs
src/render/shader/: atlas.wgsl  bindings_and_io.wgsl  detail_tiles.wgsl  fit.wgsl  fragment.wgsl  sampling_filters.wgsl  vertex.wgsl
src/render/streaming/: contracts.rs  coordinator.rs  feedback.rs  feedback.wgsl  feedback_collect.wgsl  feedback_collect_buf.wgsl  feedback_render.wgsl  gpu_sync.rs  mod.rs
src/render/ui/: mod.rs
src/spatial/: mod.rs
src/spatial/camera/: mod.rs  uniform.rs
src/spatial/navigation/: controller.rs  input.rs  mod.rs  runtime.rs  viewport.rs
src/spatial/view/: metrics.rs  mod.rs  state.rs
(+273 files in other folders)
